@@ -1,3 +1,9 @@
+2005-09-29 Scott Dattalo <scott@dattalo.com>
+	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src_asm.cc: More
+	preferences work; now the colors for the source browser example
+	text can be configured (this configuration doesn't map back into
+	the source browser yet).
+
 2005-09-28 Scott Dattalo <scott@dattalo.com>
 	* src/16bit-registers.cc, src/16bit-registers.h, src/tmr0.cc,
 	src/tmr0.h: The high byte of TMR0 for the 18F family was not
